# QNCMusic

./: .gitmodules  CMakeLists.txt  Main.qml  README.md  album.qml  api.cpp  api.h  artist_album.qml  config.json  main.cpp  qml.qrc  song_url_v1.qml
